# resume-maker-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: .env.example  generate_pdf.py  pyproject.toml  resume_generator.py  test_resume_generator.py
